fix navbar size on mobile

--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -319,9 +319,18 @@ ol li {
 .show {
   display: block;
 }
+
 @media screen and (max-width: 820px) {
   #mainTitle {
     font-size: 2em;
+    text-align: left;
+  }
+  .navbar {
+    width: 100%
+  }
+  .dropdown-content {
+    right: 20px;
+
   }
 }
 
